--- a/docs/options.yaml
+++ b/docs/options.yaml
@@ -1,7 +1,7 @@
 from: markdown
 to: html5
 input-file: lookup.md
-output-file: readme.html
+output-file: documentation.html
 standalone: true
 top-level-division: chapter
 table-of-contents: true
