It would help if I actually, ya know, update the build script?

--- a/docs/options.yaml
+++ b/docs/options.yaml
@@ -1,6 +1,6 @@
 from: markdown
 to: html5
-input-file: lookup.md
+input-file: readme.md
 output-file: documentation.html
 standalone: true
 top-level-division: chapter
